crates/nash-can/tests/snapshots/kinds__self_application_case_15.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('f ('f ('g)) ('g ('a) ('g)))\ntype w = W (s (s tag tag) s)"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:3:45]
 2 │ type tag 'a = Tag
 3 │ type s 'f 'g 'a = S ('f ('f ('g)) ('g ('a) ('g)))
   ·                                             ──
 4 │ type w = W (s (s tag tag) s)
   ╰────
  help: Check the type application and the kinds of its arguments.
