crates/nash-can/tests/snapshots/kinds__self_application_case_20.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f ('f) ('a)) ('g (tag) ('g)))\ntype w = W (s s (s s s))"
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 3,
                column: 30,
            },
            end: Position {
                line: 3,
                column: 32,
            },
        },
        context: LittleField {
            union: "s",
            ctor: "S",
            index: 0,
        },
    },
]
